[package]
name = "dust_distributor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
iso8601 = { version = "0.6.3", features = ["chrono", "serde"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] } 
